# icloudphotos-docker

./: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  test_dns.py
.github/workflows/: docker-publish.yml
config/: Dockerfile  config.example.yaml  docker-compose.yml  entrypoint.sh  healthcheck.sh
specs/001-icloudpd-sync-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-icloudpd-sync-framework/checklists/: pre-implement.md  requirements.md
specs/001-icloudpd-sync-framework/contracts/: config-schema.md  plugin-interface.md
src/: logger.py  main.py
src/auth/: cookie_store.py  mfa.py  session.py
src/config/: loader.py  schema.py
src/control/: file_watch.py  telegram_bot.py
src/icloud_docker/: __init__.py  main.py
src/icloud_docker/auth/: cookie_store.py  mfa.py  session.py
src/icloud_docker/config/: loader.py  schema.py
src/icloud_docker/control/: telegram_bot.py
src/icloud_docker/notify/: bus.py
src/icloud_docker/pipeline/: base.py  (+1 more)
src/pipeline/: runner.py
src/sync/: differ.py  downloader.py  engine.py  icloud_wrapper.py
tests/: conftest.py  test_integration.py
tests/auth/: test_cookie_store.py  test_mfa.py  test_session.py
tests/config/: test_loader.py  test_schema.py
tests/control/: test_file_watch.py  test_telegram_bot.py
tests/notify/: test_bus.py  test_channels.py  test_telegram_service.py
tests/pipeline/: test_base.py  test_heic_convert.py  test_runner.py
tests/sync/: test_differ.py  test_downloader.py  test_engine.py  test_icloud_wrapper.py
(+11 files in other folders)
